test/fixtures/warnings/class-declaration.txt
class-declaration.j:4:23: error: cannot find implementation declaration for 'Bar', superclass of 'Foo'
@implementation Foo : Bar
                      ^
class-declaration.j:15:1: error: duplicate definition of method 'test:'
-(void)test:(int)arg
^
class-declaration.j:9:1: note: original definition is here:
-(void)test:(int)arg
^
class-declaration.j:26:14: error: redeclaration of instance variable 'firstName' in class 'Bar'
    CPString firstName;
             ^
class-declaration.j:6:14: note: previous declaration is here, in class 'Foo'
    CPString firstName;
             ^
class-declaration.j:31:4: warning: conflicting return type in implementation of 'test:': 'void' vs 'int'
- (int)test:(float)arg
   ^
class-declaration.j:9:3: note: previous implementation is here
-(void)test:(int)arg
  ^
class-declaration.j:31:14: warning: conflicting parameter type in implementation of 'test:': 'int' vs 'float'
- (int)test:(float)arg
             ^
class-declaration.j:9:14: note: previous implementation is here
-(void)test:(int)arg
             ^
class-declaration.j:38:1: error: duplicate definition of class 'Bar'
@implementation Bar
^
class-declaration.j:23:1: note: previous definition is here
@implementation Bar : Foo
^

2 warnings and 4 errors generated.
